2015-02-03  Julien Bect  <julien.bect@supelec.fr>

	@stk_dataframe/apply, min, max: Return more than one output argument

	* arrays/@stk_dataframe/apply.m: Return more than one output argument
	* arrays/@stk_dataframe/max.m: Return more than one output argument
	* arrays/@stk_dataframe/min.m: Return more than one output argument

	stk_param_relik.m: Improve the computation of G = W' * K * W

	* paramestim/stk_param_relik.m: Compute G = W' * K * W in such a
	way that the result is always (?) symmetric.

2015-01-28  Julien Bect  <julien.bect@supelec.fr>

	stk_predict.m: Compute lambda_mu and RS only when necessary

	* core/stk_predict.m: Compute lambda_mu and RS only when
	necessary, depending on the number of output arguments. Add unit
	tests.

	stk_param_init.m: Handle the heteroscedastic case

	* paramestim/stk_param_init.m: Handle the heteroscedastic case
	with known variance properly. Error in the heteroscedastic case
	with unknown variance. Add unit tests.

2015-01-27  Julien Bect  <julien.bect@supelec.fr>

	stk_param_init.m: Fix a bug.

	* paramestim/stk_param_init.m (paraminit_): Fix a bug.

2015-01-25  Julien Bect  <julien.bect@supelec.fr>

	stk_dataframe.m: Make sure that the output is an stk_dataframe

	* arrays/@stk_dataframe/stk_dataframe.m: Make sure that the output
	is an stk_dataframe object. Add unit tests.

2015-01-24  Julien Bect  <julien.bect@supelec.fr>

	Overload a few base functions for stk_dataframe objects

	* arrays/@stk_dataframe/sort.m: Overload base function
	* arrays/@stk_dataframe/mtimes.m: Overload base function

2015-01-23  Julien Bect  <julien.bect@supelec.fr>

	stk_conditioning.m: Overload for stk_dataframe objects

	* arrays/@stk_dataframe/stk_conditioning.m: Overload
	stk_conditioning for stk_dataframe inputs. The output is an
	stk_dataframe object if either LAMBDA or ZSIM is an stk_dataframe
	object.
	* utils/stk_conditioning.m: Do not convert the output into an
	stk_dataframe object.
